fix(template): resolve test failures in template system
- Fix aiofiles usage pattern for proper async file operations
- Ensure template directories exist before file creation
- Correct operator precedence in condition evaluation
- Fix string literal handling in template conditions
- Improve complex conditional parsing (AND/OR/NOT operators)
- Add comprehensive debugging and error handling
- All 103 tests now passing

--- a/.env.example
+++ b/.env.example
@@ -54,6 +54,13 @@ GOOGLE_APPLICATION_CREDENTIALS=/path/to/google-credentials.json
 GARMIN_EMAIL=your_garmin_email
 GARMIN_PASSWORD=your_garmin_password
 
+# GitHub Integration (FREE Data Persistence)
+GITHUB_TOKEN=ghp_xxxxxxxxxxxxxxxxxxxx
+OBSIDIAN_BACKUP_REPO=https://github.com/yourusername/obsidian-vault-backup.git
+OBSIDIAN_BACKUP_BRANCH=main
+GIT_USER_NAME=ObsidianBot
+GIT_USER_EMAIL=bot@example.com
+
 # Environment and Logging
 ENVIRONMENT=production
 ENABLE_MOCK_MODE=false
