docs: update all documentation to reflect current architecture and unified channel design
- Update README.md to show #memo as unified input channel
- Update CLAUDE.md module structure with latest organization
- Update EASY_SETUP.md to reflect simplified channel configuration
- Update .env.example to document unified channel approach
- Update docs-index.md with current date
- Reflect AI-powered automatic categorization instead of separate channels
- Remove references to deprecated #inbox channel
- Emphasize single #memo channel for all content types

--- a/.env.example
+++ b/.env.example
@@ -22,24 +22,25 @@ OBSIDIAN_VAULT_PATH=/path/to/your/obsidian/vault
 # =============================================================================
 #
 # REQUIRED CHANNELS (must be created):
-# 🔴 #inbox           - Main memo and message processing
-# 🔴 #notifications   - System alerts and feedback
-# 🔴 #commands        - Bot command execution
+# 🔴 #memo           - 🆕 UNIFIED input for ALL content types (memos, finance, tasks, health, etc.)
+# 🔴 #notifications  - System alerts and feedback
+# 🔴 #commands       - Bot command execution
 #
-# RECOMMENDED CHANNELS (for full functionality):
-# 🟡 #voice           - Voice memo uploads
-# 🟡 #files           - File attachment handling
-# 🟡 #money           - Financial transaction tracking
-# 🟡 #tasks           - Task and productivity management
+# OPTIONAL CHANNELS (specialized input):
+# 🟡 #voice          - Voice memo uploads
+# 🟡 #files          - File attachment handling
 #
-# OPTIONAL CHANNELS (advanced features):
-# ⚪ #finance-reports       - Financial analytics
-# ⚪ #productivity-reviews  - Daily productivity summaries
-# ⚪ #projects             - Project management
-# ⚪ #health-activities    - Health and fitness tracking
-# ⚪ #income               - Income tracking
-# ⚪ #subscriptions        - Subscription management
-# ⚪ #logs                 - System logs and debugging
+# 🆕 MAJOR SIMPLIFICATION:
+# All content now goes to #memo and gets automatically categorized by AI:
+# • Financial content → 💰 Finance folder
+# • Task content → ✅ Tasks folder
+# • Health content → 🏃 Health folder
+# • Learning content → 📚 Learning folder
+# • Quick notes → 📝 Quick Notes folder
+# • Everything else → 📋 Memos folder
+#
+# No more need for: #money, #tasks, #finance-reports, #productivity-reviews, etc.
+# The AI handles all categorization automatically!
 #
 # Create channels with these exact names - the bot will find them automatically!
 
@@ -71,9 +72,9 @@ LOG_LEVEL=INFO
 # =============================================================================
 #
 # 1. Fill in the required settings above
-# 2. Create at least these 3 channels in Discord: #inbox, #notifications, #commands
+# 2. Create at least these 3 channels in Discord: #memo, #notifications, #commands
 # 3. Run: uv run python -m src.main
 # 4. Check the logs - you should see "Discovered channel" messages
-# 5. Post a message in #inbox to test!
+# 5. Post a message in #memo to test!
 #
 # For detailed setup help, see: docs/EASY_SETUP.md
