--- a/.gitignore
+++ b/.gitignore
@@ -104,6 +104,7 @@ venv/
 ENV/
 env.bak/
 venv.bak/
+.envrc
 
 # Spyder project settings
 .spyderproject
@@ -221,6 +222,11 @@ temp_*.py
 .serena/
 .context7/
 .deepwiki/
+
+# MCP configuration with tokens (security)
+.mcp.json
+.mcp.local.json
+*mcp*.json
 
 # Development and debugging
 debug.log
